# as-time-goes-by

./: .gitignore  alembic_add_category.py  alembic_add_cover_caption.py  dockerfile  pyproject.toml  requirements.txt  reset_peter284_password.py
alembic/: env.py
alembic/versions/: ee7b3dc487ed_add_category_to_posts.py
app/: database.py  dockerignore  email.py  energy.html  main.py  models.py  routers.py  schemas.py  storage.py  templates_config.py
app/auth/: dependencies.py  routes.py  utils.py
app/energy_calculator/: __init__.py  router.py
app/energy_calculator/static/energy_calculator/: energy_calculator.css  energy_calculator.js
app/energy_calculator/static/energy_calculator/js/: app.js  calc.js  components.js  data.js  energy-ui.js  events.js  state.js  ui.js  utils.js
app/energy_calculator/templates/energy_calculator/: energy-calculator.html
app/scripts/: fix_categories.py  list_post_categories.py
app/static/: sw.js
app/static/css/: quill-better-table.css  style.css
app/static/js/: script.js  theme.js
app/static/uploads/: ACT.jfif  NT.jfif  WA.jfif  nsw.jfif  qld.jfif  southAustralia.jfif  victoria.jfif
app/templates/: about.html  about_me.html  authers.html  author.html  base.html  contact.html  create.html  edit.html  energy-calculator.html  home.html  landing.html  login.html  mortgage.html  post.html  register.html  search.html
docs/: landing.html  style.css
